--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .cell {
   width: 100px;
   height: 100px;
-  border: 1px solid black;
+  border: 1px solid #000000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,3 +49,8 @@ body {
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#centralizar {
+  margin-left: 17px;
+}
+
